// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inject highlight wrappers for figure with caption for highlight ending on an <img> in chrome and safari 1`] = `
<span
  class="undefined first text yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  hardware store sells 16-ft ladders and 24-ft ladders. A window is located 12 feet above the ground. A ladder needs to be purchased that will reach the window from a point on the ground 5 feet from the building.
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight ending on an <img> in chrome and safari 2`] = `
<span
  class="undefined block last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight ending on an <img> in firefox 1`] = `
<span
  class="undefined first text yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  sells 16-ft ladders and 24-ft ladders. A window is located 12 feet above the ground. A ladder needs to be purchased that will reach the window from a point on the ground 5 feet from the building.
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight ending on an <img> in firefox 2`] = `
<span
  class="undefined block last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting and ending on an <img> in chrome 1`] = `
<span
  class="undefined first block last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting and ending on an <img> in firefox 1`] = `
<span
  class="undefined first block last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> in chrome 1`] = `
<span
  class="undefined first block yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> in chrome 2`] = `
<span
  class="undefined text last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  Figure
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> in firefox 1`] = `
<span
  class="undefined first block yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> in firefox 2`] = `
<span
  class="undefined text last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  Figure
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> where img is first element on page in chrome 1`] = `
<span
  class="undefined first block last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> where img is first element on page in firefox 1`] = `
<span
  class="undefined first block last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for img between paragraphs in chrome 1`] = `
<span
  class="undefined first text yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  the first terms, the outer terms, the inner terms, and then the last terms of each binomial.
</span>
`;

exports[`inject highlight wrappers for img between paragraphs in chrome 2`] = `
<span
  class="undefined block last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <img
    alt="Two quantities in parentheses are being multiplied, the first being: a times x plus b and the second being: c times x plus d."
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/eb942bf030580de7cb1d8c7d484771addceb7da6"
  />
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for img between paragraphs in firefox 1`] = `
<span
  class="undefined first text yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  the first terms, the outer terms, the inner terms, and then the last terms of each binomial.
</span>
`;

exports[`inject highlight wrappers for img between paragraphs in firefox 2`] = `
<span
  class="undefined block last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <img
    alt="Two quantities in parentheses are being multiplied, the first being: a times x plus b and the second being: c times x plus d."
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/eb942bf030580de7cb1d8c7d484771addceb7da6"
  />
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for text followed by section in chrome 1`] = `
<span
  class="undefined first text last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  How To
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;

exports[`inject highlight wrappers for text followed by section in firefox 1`] = `
<span
  class="undefined first text last yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
    tabindex="0"
  />
  How To
  <span
    aria-label="undefined"
    data-for-screenreaders="true"
    data-highlight-id="some-highlight"
  />
</span>
`;
